slight mod so that you don't have to change the return type